namespace YaronEfrat.Yiyo.Domain.Reflection.Models.Entities;

public class Motto: Entity
{
    public string Content { get; set; }
}
