namespace YaronEfrat.Yiyo.Domain.Reflection.Models.Entities;

public abstract class ReflectionEvent : Entity
{
    public string Title { get; set; }
}
