@startuml domain-entities-class-diagram
skinparam packageStyle rectangle

package Reflection {

    abstract class Entity {
        -_requestedHashCode : int?
        +Id : int
        +bool Equals(object? obj)
        +int GetHashCode()
    }

    abstract class ValueObject {
        #{abstract} IEnumerable<object> GetEqualityComponents()
        +bool Equals(object? obj)
        +int GetHashCode()
    }

    package {
        abstract class Part {
            +PersonalEvents : IList<PersonalEvent>
            +Feelings : IList<Feeling>
            +Motto : Motto
        }

        class "Year In" as YearIn {
            +WorldEvents : IList<WorldEvent>
        }

        class "Year Out" as YearOut
    }

    abstract class ReflectionEvent {
        +Title : string
    }

    class "World event" as WorldEvent {
        +Sources : IList<Source>
    }

    class "Personal event" as PersonalEvent
    class Feeling {
        +Title : string
        +Description : string
        +PersonalEvents : IList<PersonalEvent>
    }

    class Motto {
        +Content : string
    }

    class Source {
        +Url : Uri
        +Source(Uri url)
        +Source(string url)
        #IEnumerable<object> GetEqualityComponents()
    }

}

Entity <|-- Part
Entity <|-- ReflectionEvent
Entity <|-- Feeling
Entity <|-- Motto
ValueObject <|-- Source
ReflectionEvent <|-- WorldEvent
ReflectionEvent <|-- PersonalEvent
Feeling "1" *- "0..*" PersonalEvent : references >
WorldEvent "1" *-- "0..*" Source : references <
Part <|-- YearIn
Part <|-- YearOut
YearIn "1" *- "*" WorldEvent : has >
YearIn "1" *-- "*" PersonalEvent : has >
YearIn "1" *-- "*" Feeling : has >
YearIn "1" *-- "1" Motto : has >
YearOut "1" *-- "*" PersonalEvent : has >
YearOut "1" *-- "*" Feeling : has >
YearOut "1" *-- "1" Motto : has >

@enduml